--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "./node_modules/eslint/bin/eslint.js . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
-    "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
+    "custom-tests": "echo \"(No other custom tests yet.)\" && echo",
+    "postinstall": "npm i bower -g && bower init -y && bower install semantic-ui --save && bower install jsrender --save"
   },
   "main": "app.js",
   "repository": {
